--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "http": "0.0.x",
     "socket.io": "0.9.x",
     "html": "0.0.x",
-    "mysql": "2.0.x"
+    "mysql": "2.0.x",
+    "q": "0.8.x"
   },
   "engines": {
     "node": "0.8.x",
