--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "socket.io": "0.9.x",
     "html": "0.0.x",
     "mysql": "2.0.x",
-    "q": "0.8.x"
+    "q": "0.8.x",
     "passport": "0.1.x",
-    "passport-facebook": "0.1.x"
+    "passport-facebook": "0.1.x",
+    "passport-local": "0.1.x",
+    "connect-flash": "0.1.x"
   },
   "engines": {
     "node": "0.8.x",
