--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "passport": "0.1.x",
     "passport-facebook": "0.1.x",
     "passport-local": "0.1.x",
-    "connect-flash": "0.1.x"
+    "connect-flash": "0.1.x",
+    "jquery": "1.8.x"
   },
   "engines": {
     "node": "0.8.x",
